--- a/study-guide.html
+++ b/study-guide.html
@@ -89,21 +89,22 @@
     <p>Explore all key WAEC Math topics.</p>
   </div>
 
-  <!-- Main Chapter Grid -->
-  <div class="chapter-grid">
-    <a class="chapter-card" href="chapters/numbers.html">Numbers</a>
-    <a class="chapter-card" href="chapters/algebra.html">Algebra</a>
-    <a class="chapter-card" href="chapters/geometry.html">Geometry</a>
-    <a class="chapter-card" href="#">Trigonometry</a>
-    <a class="chapter-card" href="#">Statistics</a>
-    <a class="chapter-card" href="#">Probability</a>
-  </div>
+<!-- Main Chapter Grid -->
+<div class="chapter-grid">
+  <a class="chapter-card" href="chapters/numbers.html">Numbers</a>
+  <a class="chapter-card" href="chapters/algebra.html">Algebra</a>
+  <a class="chapter-card" href="chapters/geometry.html">Geometry</a>
+  <a class="chapter-card" href="chapters/trigonometry.html">Trigonometry</a>
+  <a class="chapter-card" href="chapters/statistics.html">Statistics</a>
+  <a class="chapter-card" href="chapters/probability.html">Probability</a>
+</div>
 
-  <!-- Last Row Centered -->
-  <div class="chapter-grid last-row">
-    <a class="chapter-card" href="#">Commercial Mathematics</a>
-    <a class="chapter-card" href="#">Miscellaneous Topics</a>
-  </div>
+<!-- Last Row Centered -->
+<div class="chapter-grid last-row">
+  <a class="chapter-card" href="chapters/commercial-mathematics.html">Commercial Mathematics</a>
+  <a class="chapter-card" href="chapters/miscellaneous.html">Miscellaneous Topics</a>
+</div>
+
 
   <footer>
     <p>&copy; 2025 Cheetah WAEC. All rights reserved.</p>
