Update logo path and navigation

--- a/study-guide.html
+++ b/study-guide.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Study Guide – Cheetah WAEC</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <script defer src="assets/script.js"></script>
   <style>
     body {
       background: #f8f6f2;
@@ -69,20 +70,22 @@
   <nav>
     <div class="nav-container">
         <h1 style="display: flex; align-items: center;">
-            <a href=" index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+            <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
               <img src="assets/images/logo.png" alt="Cheetah WAEC Logo" style="height:40px; vertical-align:middle; margin-right:10px;">
               <span>Cheetah WAEC</span>
             </a>
           </h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="study-guide.html">Study Guide</a></li>
-        <li><a href="#">Past Papers</a></li>
-        <li><a href="#">Practice</a></li>
-        <li><a href="#" class="subscribe-btn">Subscribe</a></li>
-      </ul>
-    </div>
-  </nav>
+          <button class="menu-toggle">☰</button>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="study-guide.html">Study Guide</a></li>
+            <li><a href="#">Past Papers</a></li>
+            <li><a href="#">Telegram Bot</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#" class="subscribe-btn">Subscribe</a></li>
+          </ul>
+        </div>
+      </nav>
 
   <div class="chapter-title">
     <h2>Study Guide</h2>
@@ -97,13 +100,11 @@
   <a class="chapter-card" href="chapters/trigonometry.html">Trigonometry</a>
   <a class="chapter-card" href="chapters/statistics.html">Statistics</a>
   <a class="chapter-card" href="chapters/probability.html">Probability</a>
-</div>
-
-<!-- Last Row Centered -->
-<div class="chapter-grid last-row">
   <a class="chapter-card" href="chapters/commercial-mathematics.html">Commercial Mathematics</a>
   <a class="chapter-card" href="chapters/miscellaneous.html">Miscellaneous Topics</a>
 </div>
+
+
 
 
   <footer>
