--- a/index.html
+++ b/index.html
@@ -18,36 +18,37 @@
                   <span>Cheetah WAEC</span>
                 </a>
               </h1>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="study-guide.html">Study Guide</a></li>
-            <li><a href="#">Past Papers</a></li>
-            <li><a href="#">Practice</a></li>
-            <li><a href="#" class="subscribe-btn">Subscribe</a></li>
-          </ul>
-        </div>
-      </nav>
+              <button class="menu-toggle">☰</button>
+              <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="study-guide.html">Study Guide</a></li>
+                <li><a href="#">Past Papers</a></li>
+                <li><a href="#">Telegram Bot</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#" class="subscribe-btn">Subscribe</a></li>
+              </ul>
+            </div>
+          </nav>
       
 
     <section class="hero">
         <div class="container">
-            <h1>Master WAEC Mathematics with <span>Speed</span> and <span>Precision</span></h1>
-            <p>Learn fast, study smart, and excel with expert explanations and practice.</p>
+            <h1>Master WAEC Mathematics with Speed and Precision</h1>
+           
         </div>
     </section>
 
     <section class="features">
         <div class="container">
             <div class="feature-box">
+                <h3>Telegram Bot</h3>
+                <p>Solve past questions,get instant feedback, monitor your progress</p>
+                <a href="#" class="black-button" >Get Practice</a>
+            </div>
+            <div class="feature-box">
                 <h3>Study Guide</h3>
                 <p>Read the book, master WAEC concepts, and build confidence in solving problems.</p>
-                <a href="study-guide.html" class="black-button">Read Now</a>
-            </div>
-
-            <div class="feature-box">
-                <h3>Interactive AI Teacher</h3>
-                <p>Get instant feedback, solve past questions, and test your understanding.</p>
-                <a href="#" class="outline-button">Get Practice</a>
+                <a href="study-guide.html" class="outline-button">Read Now</a>
             </div>
         </div>
     </section>
