--- a/template6.html
+++ b/template6.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script defer src="assets/script.js"></script>
   <meta charset="UTF-8" />
   <title>{{TITLE}} – WAEC Math | Cheetah WAEC</title>
   <meta name="description" content="Master WAEC math basics with Numbers and Numeration: fractions, decimals, indices, surds, number bases, sets, and more — explained with examples.">
@@ -39,21 +40,23 @@
   <!-- Navigation -->
   <nav>
     <div class="nav-container">
-      <h1 style="display: flex; align-items: center;">
-        <a href="../../index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
-          <img src="../../assets/images/logo.png" alt="Cheetah WAEC Logo" style="height:40px; vertical-align:middle; margin-right:10px;">
-          <span>Cheetah WAEC</span>
-        </a>
-      </h1>
-      <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../study-guide.html">Study Guide</a></li>
-        <li><a href="#">Past Papers</a></li>
-        <li><a href="#">Practice</a></li>
-        <li><a href="#" class="subscribe-btn">Subscribe</a></li>
-      </ul>
-    </div>
-  </nav>
+        <h1 style="display: flex; align-items: center;">
+            <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+              <img src="assets/images/logo.png" alt="Cheetah WAEC Logo" style="height:40px; vertical-align:middle; margin-right:10px;">
+              <span>Cheetah WAEC</span>
+            </a>
+          </h1>
+          <button class="menu-toggle">☰</button>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="study-guide.html">Study Guide</a></li>
+            <li><a href="#">Past Papers</a></li>
+            <li><a href="#">Telegram Bot</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#" class="subscribe-btn">Subscribe</a></li>
+          </ul>
+        </div>
+</nav>
 
 
   <!-- Main Content -->
