Update study guide and site content

--- a/study-guide.html
+++ b/study-guide.html
@@ -79,10 +79,10 @@
           <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="study-guide.html">Study Guide</a></li>
-            <li><a href="#">Past Papers</a></li>
+            <li><a href="past-papers.html">Past Papers</a></li>
             <li><a href="#">Telegram Bot</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#" class="subscribe-btn">Subscribe</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="subscribe" class="subscribe-btn">Subscribe</a></li>
           </ul>
         </div>
       </nav>
