Push latest updates

--- a/subscribe.html
+++ b/subscribe.html
@@ -44,14 +44,6 @@
     }
 
     .content a {
-      color: #0070f3;
-      text-decoration: none;
-    }
-
-    .content a:hover {
-      text-decoration: underline;
-    }
-    .content a {
   color: #444444; /* Orange to match your brand */
   text-decoration: none;
 }
@@ -65,6 +57,18 @@
       margin-top: 80px;
       text-align: center;
     }
+
+    a {
+  color: #FF6600;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+a:hover {
+  color: #E65C00;
+  text-decoration: underline;
+}
+
   </style>
 </head>
 <body>
@@ -87,43 +91,32 @@
       </ul>
     </div>
   </nav>
-
-  <div class="content">
-    <h2>WAEC Math Study Guide</h2>
-    <p><a href="assets/waec-math-study-guide.pdf" download>Download the full PDF guide</a></p>
-
-    <h2>Past Papers</h2>
-
-    <h4>2024</h4>
-    <ul>
-      <li><a href="assets/past-papers/2024-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2024-solutions.pdf">Solutions</a></li>
-    </ul>
-
-    <h4>2023</h4>
-    <ul>
-      <li><a href="assets/past-papers/2023-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2023-solutions.pdf">Solutions</a></li>
-    </ul>
-
-    <h4>2022</h4>
-    <ul>
-      <li><a href="assets/past-papers/2022-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2022-solutions.pdf">Solutions</a></li>
-    </ul>
-
-    <h4>2021</h4>
-    <ul>
-      <li><a href="assets/past-papers/2021-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2021-solutions.pdf">Solutions</a></li>
-    </ul>
-
-    <h4>2020</h4>
-    <ul>
-      <li><a href="assets/past-papers/2020-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2020-solutions.pdf">Solutions</a></li>
-    </ul>
+  <div class="content" style="max-width: 800px; margin: 80px auto; padding: 0 20px; font-family: sans-serif; text-align: center;">
+    <h2 style="font-size: 32px; margin-bottom: 20px;">✨ Subscribe & Support Our Mission</h2>
+  
+    <p style="font-size: 18px; line-height: 1.6; color: #333;">
+      Unlock the full power of the <strong>Cheetah WAEC Bot</strong> by subscribing to our premium features. 
+      With a subscription, you’ll get access to advanced problem-solving tools, instant feedback, detailed explanations, and smart revision features — all designed to help you succeed in WAEC Mathematics with confidence and speed.
+    </p>
+  
+    <a href="https://ko-fi.com/cheetahwaec" target="_blank" style="display: inline-block; background-color: #ff5f5f; color: white; font-weight: bold; font-size: 18px; padding: 12px 24px; border-radius: 8px; margin: 30px 0; text-decoration: none;">
+      Subscribe on Ko-fi
+    </a>
+  
+    <h3 style="font-size: 24px; margin-top: 40px;">🎁 Want to Support Our Mission?</h3>
+    <p style="font-size: 18px; line-height: 1.6; color: #333;">
+      If you believe in accessible and high-quality education for West African students, consider making a one-time donation. Your contribution helps us continue building free study materials, improving the bot, and reaching more learners.
+    </p>
+  
+    <p style="font-size: 18px; color: #333;">
+      🙌 <strong>We deeply appreciate every donor</strong> — your support fuels our work and keeps this project alive for thousands of students across the region.
+    </p>
+  
+    <a href="https://ko-fi.com/cheetahwaec" target="_blank" style="display: inline-block; background-color: #0070f3; color: white; font-weight: bold; font-size: 18px; padding: 10px 22px; border-radius: 8px; text-decoration: none;">
+      Donate on Ko-fi
+    </a>
   </div>
+  
 
   <footer>
     <p>&copy; 2025 Cheetah WAEC. All rights reserved.</p>
