--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li><a href="index.html">Home</a></li>
              <li><a href="study-guide.html">Study Guide</a></li>
             <li><a href="past-papers.html">Past Papers</a></li>
-            <li><a href="#">Telegram Bot</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="subscribe" class="subscribe-btn">Subscribe</a></li>
+            <li><a href="https://t.me/cheetahwaecbot" target="_blank">Telegram Bot</a></li>
+            <li><a href="contact.html">About Us</a></li>
+            <li><a href="subscribe.html" class="subscribe-btn">Subscribe</a></li>
               </ul>
             </div>
           </nav>
@@ -43,7 +43,7 @@
             <div class="feature-box">
                 <h3>Telegram Bot</h3>
                 <p>Solve past questions,get instant feedback, monitor your progress</p>
-                <a href="#" class="black-button" >Get Practice</a>
+                <a href="https://t.me/cheetahwaecbot" class="black-button" >Get Practice</a>
             </div>
             <div class="feature-box">
                 <h3>Study Guide</h3>
