Update bot page, embed TikTok, improve layout and images

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@ a:hover {
         <li><a href="index.html">Home</a></li>
         <li><a href="study-guide.html">Study Guide</a></li>
         <li><a href="past-papers.html">Past Papers</a></li>
-        <li><a href="https://t.me/cheetahwaecbot" target="_blank">Telegram Bot</a></li>
+        <li><a href="telegram.html">Telegram Bot</a></li>
         <li><a href="contact.html">About Us</a></li>
         <li><a href="subscribe.html" class="subscribe-btn">Subscribe</a></li>
       </ul>
@@ -109,7 +109,7 @@ a:hover {
 
   <div class="content">
 
-    <h2 style="text-align: center;">Contuct Us</h2>
+    <h2 style="text-align: center;">Contact Us</h2>
     <ul style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0;">
 
       <li><a href="mailto:cheetahwaec@gmail.com">Email: cheetahwaec@gmail.com</a></li>
