--- a/study-guide.html
+++ b/study-guide.html
@@ -80,7 +80,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="study-guide.html">Study Guide</a></li>
             <li><a href="past-papers.html">Past Papers</a></li>
-            <li><a href="https://t.me/cheetahwaecbot" target="_blank">Telegram Bot</a></li>
+            <li><a href="telegram.html">Telegram Bot</a></li>
             <li><a href="contact.html">About Us</a></li>
             <li><a href="subscribe.html" class="subscribe-btn">Subscribe</a></li>
           </ul>
