--- a/past-papers.html
+++ b/past-papers.html
@@ -2,10 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Past papers pdf in good quolity. Problems and solutions. Master WAEC Mathematics with our complete study guide.">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Study Guide – Cheetah WAEC</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script defer src="assets/script.js"></script>
+  
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LearningResource",
+      "name": "Cheetah WAEC - WAEC Mathematics Study Guide",
+      "description": "A comprehensive and interactive guide for Nigerian secondary school students preparing for the WAEC mathematics exam.",
+      "educationalLevel": "Secondary School",
+      "inLanguage": "en",
+      "isAccessibleForFree": true,
+      "teaches": [
+        "Algebra", "Numbers and Numeration", "Geometry", "Trigonometry", 
+        "Statistics", "Probability", "Commercial Mathematics", "Vectors", "Transformation"
+      ],
+      "educationalUse": "Study and Practice",
+      "learningResourceType": "StudyGuide",
+      "provider": {
+        "@type": "Organization",
+        "name": "Cheetah WAEC",
+        "url": "https://cheetahwaec.com"
+      }
+    }
+    </script>
+
+
   <style>
     body {
       background: #f8f6f2;
@@ -96,32 +125,38 @@
 
     <h4>2024</h4>
     <ul>
-      <li><a href="assets/past-papers/2024-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2024-solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2024allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2024solutions.pdf">Solutions</a></li>
     </ul>
 
     <h4>2023</h4>
     <ul>
-      <li><a href="assets/past-papers/2023-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2023-solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2023allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2023solutions.pdf">Solutions</a></li>
     </ul>
 
     <h4>2022</h4>
     <ul>
-      <li><a href="assets/past-papers/2022-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2022-solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2022allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2022solutions.pdf">Solutions</a></li>
     </ul>
 
     <h4>2021</h4>
     <ul>
-      <li><a href="assets/past-papers/2021-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2021-solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2021allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2021solutions.pdf">Solutions</a></li>
     </ul>
 
     <h4>2020</h4>
     <ul>
-      <li><a href="assets/past-papers/2020-problems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2020-solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2020allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2020solutions.pdf">Solutions</a></li>
+    </ul>
+
+    <h4>2019</h4>
+    <ul>
+      <li><a href="assets/past-papers/2019allproblems.pdf">Problems</a></li>
+      <li><a href="assets/past-papers/2019solutions.pdf">Solutions</a></li>
     </ul>
   </div>
 
