--- a/past-papers.html
+++ b/past-papers.html
@@ -125,38 +125,38 @@
 
     <h4>2024</h4>
     <ul>
-      <li><a href="assets/past-papers/2024allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2024solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2024allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2024solutions.pdf" download>Solutions</a></li>
     </ul>
 
     <h4>2023</h4>
     <ul>
-      <li><a href="assets/past-papers/2023allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2023solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2023allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2023solutions.pdf" download>Solutions</a></li>
     </ul>
 
     <h4>2022</h4>
     <ul>
-      <li><a href="assets/past-papers/2022allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2022solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2022allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2022solutions.pdf" download>Solutions</a></li>
     </ul>
 
     <h4>2021</h4>
     <ul>
-      <li><a href="assets/past-papers/2021allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2021solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2021allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2021solutions.pdf" download>Solutions</a></li>
     </ul>
 
     <h4>2020</h4>
     <ul>
-      <li><a href="assets/past-papers/2020allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2020solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2020allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2020solutions.pdf" download>Solutions</a></li>
     </ul>
 
     <h4>2019</h4>
     <ul>
-      <li><a href="assets/past-papers/2019allproblems.pdf">Problems</a></li>
-      <li><a href="assets/past-papers/2019solutions.pdf">Solutions</a></li>
+      <li><a href="assets/past-papers/2019allproblems.pdf" download>Problems</a></li>
+      <li><a href="assets/past-papers/2019solutions.pdf" download>Solutions</a></li>
     </ul>
   </div>
 
