--- a/past-papers.html
+++ b/past-papers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Past papers pdf in good quolity. Problems and solutions. Master WAEC Mathematics with our complete study guide.">
+  <meta name="description" content="Past papers pdf in good quality. Problems and step by step solutions. Master WAEC Mathematics with our complete study guide.">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Study Guide – Cheetah WAEC</title>
@@ -15,7 +15,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LearningResource",
-      "name": "Cheetah WAEC - WAEC Mathematics Study Guide",
+      "name": "Cheetah WAEC - WAEC Mathematics Study Guide and Past Papers",
       "description": "A comprehensive and interactive guide for Nigerian secondary school students preparing for the WAEC mathematics exam.",
       "educationalLevel": "Secondary School",
       "inLanguage": "en",
@@ -118,10 +118,10 @@
   </nav>
 
   <div class="content">
-    <h2>WAEC Math Study Guide</h2>
+    <h2>Complete WAEC Math Study Guide</h2>
     <p><a href="assets/waec-math-study-guide.pdf" download>Download the full PDF guide</a></p>
 
-    <h2>Past Papers</h2>
+    <h2>WAEC mathematics 2024-2019 questions and step by step solutions PDF</h2>
 
     <h4>2024</h4>
     <ul>
