--- a/past-papers.html
+++ b/past-papers.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Past papers pdf in good quality. Problems and step by step solutions. Master WAEC Mathematics with our complete study guide.">
-  
+  <title>WAEC Past Math Papers with Solutions (2019–2024) | CheetahWAEC</title>
+  <meta name="description" content="Download WAEC Mathematics past papers from 2019 to 2024 with full solutions. Practice questions, improve exam skills, and learn with CheetahWAEC.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Study Guide – Cheetah WAEC</title>
+  
   <link rel="stylesheet" href="assets/style.css" />
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script defer src="assets/script.js"></script>
