--- a/contact.html
+++ b/contact.html
@@ -118,10 +118,10 @@ a:hover {
     <ul style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0;">
       <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank">TikTok: @cheetahwaec</a></li>
       <li><a href="https://www.instagram.com/cheetahwaec" target="_blank">Instagram: @cheetahwaec</a></li>
-      <li><a href="https://www.facebook.com/cheetahwaec" target="_blank">Facebook: @cheetahwaec</a></li>
+      <li><a href="https://m.facebook.com/61575094883653/" target="_blank">Facebook: @cheetahwaec</a></li>
       <li><a href="https://t.me/cheetahwaecbot" target="_blank">Telegram Bot: @cheetahwaecbot</a></li>
       <li><a href="https://t.me/cheetahwaec" target="_blank">Telegram Channel: @cheetahwaec</a></li>
-      <li><a href="#" target="_blank">WhatsApp Chat</a></li>
+      <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank">WhatsApp Chat</a></li>
 
     </ul>
   </div>
