--- a/telegram.html
+++ b/telegram.html
@@ -102,6 +102,9 @@ a:hover {
   
     <!-- Title -->
     <h2 style="text-align: center; margin-top: 60px;">How to use the bot</h2>
+    <p style="text-align: center; font-style: italic; color: #444; margin-top: -10px;">
+      A short note: 📱 🖥️ You can access the Bot seamlessly on both mobile (Telegram app) and desktop (Telegram Desktop).
+    </p>
   
     <!-- Practice Mode -->
     <h3>1. Practice Mode</h3>
