--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+<meta name="title" content="Cheetah WAEC – Master WAEC Mathematics with Speed and Precision">
+<meta name="description" content="Prepare for the WAEC Math exam with Cheetah WAEC. Access study guides, solve past questions, and get personalized feedback via our Telegram bot.">
+<meta name="keywords" content="WAEC, WAEC math, WAEC study guide, WAEC past papers, WAEC practice, Cheetah WAEC, WAEC questions, WAEC bot, WAEC preparation, West African Examinations Council">
+<meta name="author" content="Cheetah WAEC Team">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://cheetahwaec.com/">
+<meta property="og:title" content="Cheetah WAEC – Master WAEC Mathematics with Speed and Precision">
+<meta property="og:description" content="Master WAEC Math with Cheetah WAEC’s study guide and Telegram practice bot.">
     <title>Cheetah WAEC</title>
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <!-- JSON-LD Structured Data -->
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "Cheetah WAEC",
+      "url": "https://cheetahwaec.com",
+      "logo": "https://cheetahwaec.com/assets/images/logo.png",
+      "description": "Cheetah WAEC helps students prepare for the WAEC Math exam with a smart Telegram bot and a detailed study guide.",
+      "sameAs": [
+        "https://t.me/cheetahwaecbot",
+        "https://www.instagram.com/cheetahwaec",
+        "https://www.tiktok.com/@cheetahwaec"
+      ]
+    }
+    </script>
 </head>
 <body>
     <nav>
