--- a/past-papers.html
+++ b/past-papers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>WAEC Past Math Papers with Solutions (2019–2024) | CheetahWAEC</title>
+  <title>WAEC Past Math Papers with Solutions PDF (2019–2024) | CheetahWAEC</title>
   <meta name="description" content="Download WAEC Mathematics past papers from 2019 to 2024 with full solutions. Practice questions, improve exam skills, and learn with CheetahWAEC.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
