--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <li><a href="index.html">Home</a></li>
              <li><a href="study-guide.html">Study Guide</a></li>
             <li><a href="past-papers.html">Past Papers</a></li>
+            <li><a href="practice.html">Practice</a></li>
             <li><a href="telegram.html">Telegram Bot</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="subscribe.html" class="subscribe-btn">Subscribe</a></li>
