--- a/subscribe.html
+++ b/subscribe.html
@@ -95,6 +95,7 @@ a:hover {
         <li><a href="index.html">Home</a></li>
         <li><a href="study-guide.html">Study Guide</a></li>
         <li><a href="past-papers.html">Past Papers</a></li>
+        <li><a href="practice.html">Practice</a></li>
         <li><a href="telegram.html">Telegram Bot</a></li>
         <li><a href="contact.html">About Us</a></li>
         <li><a href="subscribe.html" class="subscribe-btn">Subscribe</a></li>
