added practice js added google

--- a/practice.html
+++ b/practice.html
@@ -144,6 +144,7 @@
       <div class="row" style="margin-top: 12px;">
         <button id="btnSignIn" type="button">Sign in</button>
         <button id="btnSignUp" type="button" class="secondary">Sign up</button>
+        <button id="btnGoogle" type="button" class="secondary">Continue with Google</button>
         <button id="btnSignOut" type="button" class="secondary" style="display:none;">Sign out</button>
       </div>
       <div id="authMessage" class="muted" style="margin-top: 10px;"></div>
@@ -180,4 +181,3 @@
   <script type="module" src="assets/practice.js"></script>
 </body>
 </html>
-
